--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -1606,6 +1606,11 @@ QR_CODE</string>
 alignment: center;
 }
 QTabWidget::pane{border-radius: 0px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}
+QTabBar::tab{
+padding-left: 9px;
+padding-right: -9px;
+width:50px;
+height:50px}
 QTabBar::tab:selected {
 background: rgb(90,90,90);
 color:white;
@@ -1627,12 +1632,12 @@ color:darkgrey
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>7</number>
+           <number>0</number>
           </property>
           <property name="iconSize">
            <size>
-            <width>16</width>
-            <height>16</height>
+            <width>32</width>
+            <height>32</height>
            </size>
           </property>
           <property name="documentMode">
@@ -1645,8 +1650,12 @@ color:darkgrey
            <bool>false</bool>
           </property>
           <widget class="QWidget" name="securityPage">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/security.png</normaloff>../main/res/security.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Security</string>
+            <string/>
            </attribute>
            <layout class="QHBoxLayout" name="horizontalLayout_27">
             <item>
@@ -1730,8 +1739,12 @@ color:darkgrey
            </layout>
           </widget>
           <widget class="QWidget" name="naloxone_info">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/pill_settings.png</normaloff>../main/res/pill_settings.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Naloxone</string>
+            <string/>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_43">
             <item>
@@ -1998,8 +2011,12 @@ QSlider::handle:horizontal {
            </layout>
           </widget>
           <widget class="QWidget" name="twilio">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/server_settings.png</normaloff>../main/res/server_settings.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Twilio</string>
+            <string/>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_48">
             <item>
@@ -2035,8 +2052,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>724</width>
-                 <height>313</height>
+                 <width>714</width>
+                 <height>308</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -2360,8 +2377,12 @@ QScrollBar::sub-line:vertical {
            </layout>
           </widget>
           <widget class="QWidget" name="emergency_info">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/call_settings.png</normaloff>../main/res/call_settings.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Call</string>
+            <string/>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_8">
             <item row="0" column="0">
@@ -2762,8 +2783,12 @@ Otherwise each emergency call will cost $75. Details =&gt;</string>
            </layout>
           </widget>
           <widget class="QWidget" name="alarm">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/alarm_settings.png</normaloff>../main/res/alarm_settings.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Alarm</string>
+            <string/>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_36">
             <item>
@@ -2799,7 +2824,7 @@ QScrollBar::sub-line:vertical {
                  <x>0</x>
                  <y>0</y>
                  <width>724</width>
-                 <height>313</height>
+                 <height>284</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -3123,8 +3148,12 @@ QSlider::handle:horizontal {
            </layout>
           </widget>
           <widget class="QWidget" name="power_management">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/power.png</normaloff>../main/res/power.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Power</string>
+            <string/>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_21">
             <item>
@@ -3693,8 +3722,12 @@ QSlider::handle:horizontal {
            </layout>
           </widget>
           <widget class="QWidget" name="admin">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/admin.png</normaloff>../main/res/admin.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Admin</string>
+            <string/>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_9">
             <item row="0" column="0">
@@ -4633,8 +4666,12 @@ color:white;
            </layout>
           </widget>
           <widget class="QWidget" name="help">
+           <attribute name="icon">
+            <iconset>
+             <normaloff>../main/res/help.png</normaloff>../main/res/help.png</iconset>
+           </attribute>
            <attribute name="title">
-            <string>Help!</string>
+            <string/>
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_20">
             <item>
