--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -1605,28 +1605,25 @@ QR_CODE</string>
            <string notr="true">QTabWidget::tab-bar {
 alignment: center;
 }
-QTabWidget::pane{border-radius: 0px;border-color:rgb(50,50,50);border-width: 1px;border-style: solid;}
+QTabWidget::pane{border-radius: 0px;border-color:rgb(50,50,50);border-width: 0px;border-style: solid;}
 QTabBar::tab{
 padding-left: 9px;
 padding-right: -9px;
 width:50px;
-height:50px}
+height:50px;
+border-radius:25px}
 QTabBar::tab:selected {
-background: rgb(90,90,90);
+background: rgb(50,50,50);
 color:white;
 }
 QTabBar::tab:!selected {
-background: rgb(50,50,50);
+background: black;
 color: white;
-}
-QTabBar::tab:disabled {
-background: rgb(20,20,20);
-color:darkgrey
 }
 </string>
           </property>
           <property name="tabPosition">
-           <enum>QTabWidget::South</enum>
+           <enum>QTabWidget::North</enum>
           </property>
           <property name="tabShape">
            <enum>QTabWidget::Rounded</enum>
@@ -1781,7 +1778,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>714</width>
+                 <width>716</width>
                  <height>395</height>
                 </rect>
                </property>
@@ -2052,7 +2049,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>714</width>
+                 <width>716</width>
                  <height>308</height>
                 </rect>
                </property>
@@ -2429,7 +2426,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>716</width>
+                 <width>718</width>
                  <height>434</height>
                 </rect>
                </property>
@@ -2823,8 +2820,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>724</width>
-                 <height>284</height>
+                 <width>726</width>
+                 <height>292</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -3189,7 +3186,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>714</width>
+                 <width>716</width>
                  <height>383</height>
                 </rect>
                </property>
@@ -3768,7 +3765,7 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>716</width>
+                 <width>718</width>
                  <height>706</height>
                 </rect>
                </property>
