--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -1605,19 +1605,29 @@ QR_CODE</string>
            <string notr="true">QTabWidget::tab-bar {
 alignment: center;
 }
-QTabWidget::pane{border-radius: 0px;border-color:rgb(50,50,50);border-width: 0px;border-style: solid;}
+QTabWidget::pane{
+border-radius: 0px;
+border-color:rgb(50,50,50);
+border-width: 0px;
+border-style: solid;}
 QTabBar::tab{
 padding-left: 9px;
 padding-right: -9px;
 width:50px;
 height:50px;
-border-radius:25px}
+border-radius:25px;
+border-width:1px;
+border-color:black;
+margin-left:5px;
+margin-right:5px;}
 QTabBar::tab:selected {
 background: rgb(50,50,50);
+border-color:rgb(50,50,50);
 color:white;
 }
 QTabBar::tab:!selected {
 background: black;
+border-color:black;
 color: white;
 }
 </string>
