--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -1077,15 +1077,17 @@ border-color:rgb(50,50,50);
 border-width: 0px;
 border-style: solid;}
 QTabBar::tab{
-padding-left: 9px;
-padding-right: -9px;
+padding-left: 1px;
+padding-right: -1px;
+padding-top: -9px;
+padding-bottom:9px;
 width:50px;
 height:50px;
 border-radius:25px;
 border-width:1px;
 border-color:black;
-margin-left:4px;
-margin-right:4px;}
+margin-top:2px;
+margin-bottom:2px;}
 QTabBar::tab:selected {
 background: rgb(50,50,50);
 border-color:rgb(50,50,50);
@@ -1099,13 +1101,13 @@ color: white;
 </string>
           </property>
           <property name="tabPosition">
-           <enum>QTabWidget::North</enum>
+           <enum>QTabWidget::West</enum>
           </property>
           <property name="tabShape">
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>6</number>
+           <number>0</number>
           </property>
           <property name="iconSize">
            <size>
@@ -1254,8 +1256,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>744</width>
-                 <height>369</height>
+                 <width>704</width>
+                 <height>374</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout">
@@ -1512,8 +1514,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>754</width>
-                 <height>329</height>
+                 <width>704</width>
+                 <height>374</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -1808,8 +1810,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>756</width>
-                 <height>331</height>
+                 <width>706</width>
+                 <height>376</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_44">
@@ -2081,8 +2083,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>754</width>
-                 <height>329</height>
+                 <width>704</width>
+                 <height>374</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -2422,8 +2424,8 @@ QScrollBar::sub-line:vertical {
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>754</width>
-                 <height>329</height>
+                 <width>704</width>
+                 <height>374</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_22" stretch="0,0,0">
@@ -2925,8 +2927,8 @@ QScrollBar::sub-line:vertical {
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>-326</y>
-                 <width>746</width>
+                 <y>0</y>
+                 <width>696</width>
                  <height>711</height>
                 </rect>
                </property>
@@ -3862,65 +3864,6 @@ color:white;
                 </item>
                </layout>
               </widget>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="help">
-           <attribute name="icon">
-            <iconset>
-             <normaloff>../main/res/help.png</normaloff>../main/res/help.png</iconset>
-           </attribute>
-           <attribute name="title">
-            <string/>
-           </attribute>
-           <layout class="QVBoxLayout" name="verticalLayout_20">
-            <item>
-             <widget class="QTextEdit" name="manual_textedit">
-              <property name="autoFillBackground">
-               <bool>false</bool>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">QScrollBar {
-        background: rgb(50,50,50);
-        border-radius: 5px;
-        border-color:rgb(50,50,50);
-        width:10
-    }
-QScrollBar::handle:vertical
-    {
-        background-color: rgb(65,65,65);
-        border-radius: 5px;
-    }
-QScrollBar::add-line:vertical {
-      border: none;
-      background: none;
-}
-
-QScrollBar::sub-line:vertical {
-      border: none;
-      background: none;
-}QTextEdit {
-	background-color: black;
-	color: white;
-}</string>
-              </property>
-              <property name="readOnly">
-               <bool>true</bool>
-              </property>
-              <property name="html">
-               <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-hr { height: 1px; border-width: 0; }
-li.unchecked::marker { content: &quot;\2610&quot;; }
-li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;MANUAL&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
-              <property name="textInteractionFlags">
-               <set>Qt::NoTextInteraction</set>
-              </property>
              </widget>
             </item>
            </layout>
@@ -5826,7 +5769,6 @@ border-color: rgb(50,50,50);}</string>
   <tabstop>reportSettingsChangedCheckBox</tabstop>
   <tabstop>disarmPushButton</tabstop>
   <tabstop>exitPushButton</tabstop>
-  <tabstop>manual_textedit</tabstop>
   <tabstop>forgotPasswordPushButton</tabstop>
   <tabstop>alarmMutePushButton</tabstop>
   <tabstop>notify_admin_button_2</tabstop>
